--- a/appo_Splash.json
+++ b/appo_Splash.json
@@ -5,8 +5,8 @@
             "link_redirect": "",
             
             
-             "select_main_ads": "APPLOVIN-D",
-            "select_backup_ads": "APPLOVIN-D",
+             "select_main_ads": "APPLOVIN-M",
+            "select_backup_ads": "APPLOVIN-M",
             
             
             "main_ads_banner": "",
@@ -17,8 +17,8 @@
             "backup_ads_reward": "",
             
             
-            "main_ads_intertitial": "",
-            "backup_ads_intertitial": "",
+            "main_ads_intertitial": "d2571c8e4b4e8d04",
+            "backup_ads_intertitial": "d2571c8e4b4e8d04",
             
             
             "main_ads_native": "",
