--- a/appo_Splash.json
+++ b/appo_Splash.json
@@ -1,8 +1,8 @@
 {
   "AdsController": {
     "VPN_URL": "https://raw.githubusercontent.com/afortnitegenerator/jibekgari/refs/heads/main/VPN_Bella.json",
-    "select_main_ads": "APPLOVIN-M",
-    "select_backup_ads": "APPLOVIN-M",
+    "select_main_ads": "APPLOVIN-D",
+    "select_backup_ads": "APPLOVIN-D",
     "main_ads_banner": "",
     "backup_ads_banner": "",
     "main_ads_reward": "",
