--- a/appo_Splash.json
+++ b/appo_Splash.json
@@ -1,14 +1,18 @@
 {
   "AdsController": {
     "VPN_URL": "https://raw.githubusercontent.com/afortnitegenerator/jibekgari/refs/heads/main/VPN_Bella.json",
-    "select_main_ads": "APPLOVIN-D",
-    "select_backup_ads": "APPLOVIN-D",
-    "main_ads_banner": "",
-    "backup_ads_banner": "",
-    "main_ads_reward": "",
-    "backup_ads_reward": "",
-    "main_ads_intertitial": "",
-    "backup_ads_intertitial": "",
+ "select_main_ads": "APPLOVIN-M",
+            "select_backup_ads": "APPLOVIN-M",
+ "main_ads_banner": "289bbbefd96c474e",
+            "backup_ads_banner": "289bbbefd96c474e",
+            
+            
+            "main_ads_reward": "",
+            "backup_ads_reward": "",
+            
+            
+            "main_ads_intertitial": "1a7d1bd9a01a38b1",
+            "backup_ads_intertitial": "1a7d1bd9a01a38b1",
     "main_ads_native": "",
     "backup_ads_native": "",
     "initialize_sdk": "",
